# task_27

./: README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
ads/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_category_name.py  0002_initial.py  0003_remove_ad_author_ad_author_id_ad_category_id_and_more.py  0003_selection.py  0004_alter_ad_author_id_alter_ad_category_id_and_more.py  0004_alter_selection_owner.py  0005_category_slug_alter_ad_name.py  0005_user_age_user_first_name_user_last_name_and_more.py  0006_alter_category_slug.py  0006_rename_author_id_ad_author_and_more.py  0007_alter_ad_description.py  0007_remove_user_location_alter_user_role_user_location.py  0008_remove_user_location_user_locations.py  0009_rename_locations_user_location.py  0010_alter_location_lat_alter_location_lng.py  0011_remove_user_location_alter_ad_author_delete_location_and_more.py
ads/urls/: ad.py  selection.py
data/: ads.json  categories.json  convert_csv_to_json.py  user.json
main_page/: apps.py  views.py
main_page/migrations/: 0001_initial.py  0002_rename_id_ads_id.py  0003_alter_ads_id.py  0004_rename_ads_ad.py
task_27/: asgi.py  settings.py  urls.py  wsgi.py
tests/: factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_get_test.py  ads_retrieve_test.py  selection_create_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_location_user_locations.py  0003_rename_locations_user_location.py
